--- a/_drafts/2018-11-17-.md
+++ b/_drafts/2018-11-17-.md
@@ -7,8 +7,10 @@ title: 数据爆炸时代的数据过滤
 ---
 在网络高速发展的今天，数据源源不断的从各个媒介传入脑中，不知不觉我们走入一个数据爆炸时代，大数据已经成为每个人耳熟能详的科学词语。数据的价值无需论述，用途遍布了环境，医疗，教育，吃穿住行，有数据就可以分析，进行人工智能的学习，从而总结出结论，帮助我们下另一个结论。但大数据真的万能吗？
 
+![大数据]({{site.baseurl}}/uploads/abstract-ai-art-373543%20(1).jpg)
 
 我常常有这样的思考，在我有限的自由时间内，我希望获得一些精良的信息，比如读好的文章，听好的歌曲，看好的画作。那么怎么来选取到好的作品呢？什么是好的作品呢？对于这些强主观性问题的分析，大数据往往会有所偏颇，并非因为画，文章，歌不可拆分，事实上，他们都可以转化为信息字符，这是他们可传播的必要条件。但拆分成像素，文字，音符的内容已经不构成原本的内容，作品的精良就体现在他们的组合形式，而非单独的成分。因为无法找到准确的数学特征来进行质量优劣的分析。现在可行的在使用的方法，针对于主观问题的判断方式有两种：一是基于投票形式，也就是越多人说好，就越好。另一种是基于一定程度的个性化学习，也就是你曾经说类似的好，就越好。这两种选择方式都有其合理性，也有明显的缺点。一容易陷入人云亦云，三人成虎的境况。现如今网络上舆情治国就彰显的很明显，经常性的反转，大部分自媒体怎么说，我们就怎么相信，不只是好坏，很多时候是关于真假的辩驳。二会陷入的是局部最优解。两者的共同缺点都是对于新鲜优质数据的不友好性。
+
 
 
 怎样在汪洋的大海数据集里选择出优质其次有用的信息是大数据时代的一个大的挑战。大数据，人工智能在现在的阶段可能无法完成所有的筛选工作，但思考如何有效利用他们来减少人工的任务可能是更加切实可行的目标。过滤分多层，有明确定义，可找到数字化特征的任务可以交由计算机处理，比如恶俗词语、低俗图片、重复性垃圾信息、抄袭等内容可以首先进行过滤，这是普遍意义上的一些对于优劣的评断。第二层就值得思考了，因为参杂了很多“个性化”的内容，毕竟小众的作品也是有“众”在支持。我们不能过滤掉“我们以为不重要“的信息，但可以对“我们觉得比较重要”的内容进行推荐，被时间检验过，为世人喜爱的作品，自然值得信赖，自己小众的特别爱好也要保持，那么难点就是如何发现新鲜优质的作品。另外一个思路是如果无法进一步自动化分割好坏，那么是否有别的途径可以促使数据本身趋向于高质量，也就是如何促进更多更好的原创性数据的产生？
