--- a/_drafts/2018-11-27-.md
+++ b/_drafts/2018-11-27-.md
@@ -3,7 +3,7 @@ layout: post
 permalink: '/:categories/:year/:month/:day/:title/'
 date: '2018-11-27 21:58 +0000'
 published: false
-title: 脱发
+title: 脱发—生命不能承受之痛，为了头发我都做了这些
 ---
 前几日看到一篇文章，讲了生活在硅谷的人和他们的脱发故事。脱发，真的不是个别现象，而是困扰着广大同胞的社会级问题。作为我爸妈的女儿，我就预感到我有一天可能会向他们一样，要面对头发少的问题。果不其然，我在我爸妈开始掉头发的年纪，也开始掉。从此，我走上了一条抗击脱发的道路。在抗击脱发的道路上走了一段时间，我尝试了多种方法，目前看还是有一定成果的，虽然没有搞清楚具体是哪个方法最有效，但想到我那些还在发际线边缘挣扎的小伙伴，就觉得还是先把我使用的方法都写出来分享给大家。这些方法组合起来对我个人有一定效果，也许对你们有效，试一试总是好的。
 
