--- a/_drafts/2018-11-27-.md
+++ b/_drafts/2018-11-27-.md
@@ -9,9 +9,11 @@ title: 脱发—生命不能承受之痛，为了头发我都做了这些
 
 举手手握拳，真实故事，非广告贴。
 
-![Bottle Water]({{site.baseurl}}/uploads/bottle-drink-glass-113734.jpg)
+![矿泉水]({{site.baseurl}}/uploads/bottle-drink-glass-113734.jpg)
 
 首先，如果你是像我一样生活在加州或者水质不好的地区的小伙伴，请喝矿泉水，不要再和自来水了！不管是煮过的自来水，还是没有煮过的，都尽量别喝了。去超市买一大箱水，每天喝那个，喝完再买。我严重怀疑水质是导致我掉头发的原因之一，如果可能真想洗头也用矿泉水洗。我觉得以前在别的州上学时头发还好，好像毕业之后来湾区就开始逐渐少。为杜绝水质致脱发的可能，干脆只喝矿泉水。
+
+![红豆]({{site.baseurl}}/uploads/abundance-batch-bean-1537169.jpg)
 
 其次，脱发可能是由于脾虚或者肾虚引起的，我也不知道我是不是有这个问题，总之就稍微食疗一下。网上一般就是说多吃点黑米，核桃，黑芝麻，黑豆，枸杞，大枣，红豆等等。我现在做饭的时候就是放米，绿豆，红豆，黑豆，薏米，大枣，枸杞，百合，黑芝麻，桂圆，冰糖，然后上高压锅里煮。
 
