--- a/_drafts/2018-11-27-.md
+++ b/_drafts/2018-11-27-.md
@@ -9,18 +9,17 @@ title: 脱发—生命不能承受之痛，为了头发我都做了这些
 
 举手手握拳，真实故事，非广告贴。
 
-![矿泉水]({{site.baseurl}}/uploads/bottle-drink-glass-113734.jpg)
-
 首先，如果你是像我一样生活在加州或者水质不好的地区的小伙伴，请喝矿泉水，不要再和自来水了！不管是煮过的自来水，还是没有煮过的，都尽量别喝了。去超市买一大箱水，每天喝那个，喝完再买。我严重怀疑水质是导致我掉头发的原因之一，如果可能真想洗头也用矿泉水洗。我觉得以前在别的州上学时头发还好，好像毕业之后来湾区就开始逐渐少。为杜绝水质致脱发的可能，干脆只喝矿泉水。
 
-![红豆]({{site.baseurl}}/uploads/abundance-batch-bean-1537169.jpg)
+![矿泉水]({{site.baseurl}}/uploads/bottle-drink-glass-113734.jpg)
 
 其次，脱发可能是由于脾虚或者肾虚引起的，我也不知道我是不是有这个问题，总之就稍微食疗一下。网上一般就是说多吃点黑米，核桃，黑芝麻，黑豆，枸杞，大枣，红豆等等。我现在做饭的时候就是放米，绿豆，红豆，黑豆，薏米，大枣，枸杞，百合，黑芝麻，桂圆，冰糖，然后上高压锅里煮。
 
-![洗头]({{site.baseurl}}/uploads/img_3346.jpg)
+![红豆]({{site.baseurl}}/uploads/abundance-batch-bean-1537169.jpg)
 
 再者，我每两天洗一次头，先用生姜水洗一遍，再用洗发水洗一遍。我之前买姜总挑最小块的，因为吃不了。自从拿生姜水洗头以后，我去超市都挑最大块生姜。煮水，拿生姜切个三、四片，拿个盆，把生姜片放进去，倒开水，然后不要马上把头放到开水里，你会被烫死。可以拿水蒸气蒸一会头，然后等水凉点， 再泡头。这么做的目的主要是刺激头部血液循环。脱发的原因之一是头部供血供养不好。考虑到这个开始尝试一下民间偏方，生姜水洗发，据说还可以杀菌去油，有的还说可以加点盐和白醋。我一开始试过这个，只是家里没有白醋，我就加了点陈醋。你可以想象一下，一盆生姜水，边上又放上盐罐和醋瓶子，场面是有点滑稽。我就一开始三样都加，现在也就只放了生姜片而已。
 
+![洗头]({{site.baseurl}}/uploads/img_3346.jpg)
 
 然后再说说洗发水。我在网上看很多防脱发，养护头发的洗发水，最后决定试一下吕。我买的是黑吕，其实我头发比较偏油性的，可能买白吕比较对，但是买了黑吕就先用着。总体感觉还行，洗完挺清爽的。有人说不喜欢中药味，我咋没有觉得有药味呢。看网上的人说，选洗发水要看成分，不要含硅油的。我觉得洗发水首先不能加剧脱发，其次能固发，再养护是最好啦。最近看到有人推荐Molton Brown，准备下一次用这个试试。
 
@@ -30,17 +29,21 @@ title: 脱发—生命不能承受之痛，为了头发我都做了这些
 
 特别注意几个点，
 
-![睡觉]({{site.baseurl}}/uploads/adult-attractive-beautiful-371109.jpg)
 
 首先，要想头发好，一定要好好睡觉，如果熬夜，睡眠不足，掉头发就是分分钟的事。
 
-第二，压力大会掉头发，所以要保持心情愉快呀。也别刺激自己，看太多恐怖片。减少生气发怒的可能性，想想自己的头发，不能生气啊。多参加点有益的活动（此处角度刁钻的押题），培养一点自己的爱好，有几个好朋友，维持好心情是很重要的。说到这个我就联系到金庸书中古墓派玉女功修炼方法，不知道是参考过什么中医养生疗法 -_-||。恩，大家参考一下。
+![睡觉]({{site.baseurl}}/uploads/adult-attractive-beautiful-371109.jpg)
+
+第二，压力大会掉头发，所以要保持心情愉快呀。也别刺激自己，看太多恐怖片。减少生气发怒的可能性，想想自己的头发，不能生气啊。多参加点有益的活动（此处角度刁钻的押题），培养一点自己的爱好，有几个好朋友，维持好心情是很重要的。说到这个我就联系到金庸书中古墓派玉女功修炼方法，不知道是参考过什么中医养生疗法 -_- 大家可以参考一下。
+
+![压力大]({{site.baseurl}}/uploads/adult-female-headache-41253.jpg)
 
 古墓派玉女功养生修炼之「十二少，十二多」正反要诀：「少思、少念、少欲、少事、少语、少笑、少愁、少乐、少喜、少怒、少好、少恶。行此十二少，乃养生之都契也。
 多思则神怠，多念则精散，多欲则智损，多事则形疲，多语则气促，多笑则肝伤，多愁则心慑，多乐则意溢，多喜则忘错昏乱，多怒则百脉不定，多好则专迷不治，多恶则焦煎无宁。此十二多不除，丧生之本也。」
 
-
 第三，坚持锻炼还是好的。虽然说不上来和头发关系有多大，但是一定程度上可以促进血液循环，减脂塑形。我每天做运动操，就是在网上找视频，和教练一起做，有个半个小时，就差不多了。
+
+![坚持锻炼]({{site.baseurl}}/uploads/adventure-backlit-balance-1416627.jpg)
 
 第四，少吃油腻食物。吃太多油，可能会让头顶像伊拉克油田一样。还是要多注意一点。
 
