--- a/_drafts/2018-11-27-.md
+++ b/_drafts/2018-11-27-.md
@@ -48,3 +48,5 @@ title: 脱发—生命不能承受之痛，为了头发我都做了这些
 第四，少吃油腻食物。吃太多油，可能会让头顶像伊拉克油田一样。还是要多注意一点。
 
 最后祝大家早日生发，永远不掉！
+
+![长发美女]({{site.baseurl}}/uploads/attractive-beautiful-blond-848277.jpg)
