--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -5,8 +5,32 @@ date: '2018-11-29 11:58 +0000'
 published: false
 title: 世界最原始的样子
 ---
-今天是2018年11月29日，坐在冰岛的一家酒店的一角，强台风封路，听着台风呼啸，玻璃抖抖索索强撑着，室外沙发随风乱飞，趁着跟台风抗争的间歇，来聊聊这个世界特别的角落吧。抒情，叙事，加攻略，送给把冰岛列为第一向往地方的朋友。
+今天是2018年11月29日，坐在冰岛的一家酒店的一角，强台风封路，听着台风呼啸，玻璃抖抖索索强撑着，室外沙发随风乱飞，趁着跟台风抗争的间歇，来聊聊这个世界特别的角落吧。本篇抒情，叙事，加攻略，送给把冰岛列为第一向往地方的朋友们。
+
+<center>Day 0: 到达——意外的收获</center>
+
+到达过程不太顺利，来冰岛的航班很少有直达，本打算从赫尔辛基转机，结果第一班飞机延误，在赫尔辛基鬼使神差的被安排到了去伦敦转机的班次，知识点，瑞士居住证可以在伦敦转机，无需多余手续。到达雷克雅未克（首都）的时间已经零点。拿到租车前往第一个住地ION adventure hotel, 这家在booking.com的评分并不高，但贵在设计感强，获过很多设计奖，非常有末世感靠近靠近黄金圈，距离机场也正常路程40分钟左右，但赶巧遇到封路，只能绕道，多增加了一个小时。
+
+凌晨赶路除了困，别有番风情，驶出城区后，就进入了一片寂寥。四周毫无灯光，月亮半边脸藏在云中，朦朦胧胧，连山的轮廓都黑漆漆，模糊不清。旷野中唯一显眼的是星星，自顾自的异常明亮，无奈星座认得的不多，少许数得上来的就有射手座的三颗腰带，明铮铮定在空中。百无聊赖的赶路，收音机呲啦作响，忽然，天就不一样了，大片的极光悬在山边，绿幕如幔帐摇曳，飘动，极为明显。从去年的阿拉斯加极光chasing tour，到芬兰的极光小屋，凡极光有关旅程都没有肉眼看到极光，用专业相机长曝光捕捉到的星星点点的绿色聊以慰藉。而冰岛行毫无预期误打误撞的遇到了大片极光 。之前还在想肉眼看到极光是什么样，果真看到了就能分辨了，就是跟云不一样！高速的车上，手机随便拍拍就有绿色的天幕。变化急快，消失的的也快。但走不了多远又是新的一片，收下了第一份意外的收获。
+
+<center>Day 1:黄金圈——匠心和美好</center>
+
+10点日出，看到了ION真实的模样。
+
+启程去黄金圈。黄金圈包含辛格维利尔国家公园（Þingvellir National Park）、盖歇尔间歇泉区（Geysir）、黄金瀑布（Gullfoss），彼此距离很近，打造地球的时候对这块土地非常友好，
 
 
 
+如果想看看世界最初的样子，就去冰岛吧。苍茫甚至是寂寥的大地，随处蕴藏了鬼斧神工的设计。邂逅了一群有灵性的马，在夕阳下，奔腾而来，驻足，走近，不愿离去，美丽纯净善良美好，触碰间感受都要满的溢出来了，感觉被眷顾了，三生有幸。谢谢冰岛人为地球留下了这一方净土，怀着敬畏前行。
 
+<center>Day 2：维克——自然的力量</center>
+
+15级台风的抗争
+
+今天的故事关于自然的力量，15级台风天把世界变成了黑白色（第一三张图黑沙滩都是原图颜色），整个冰岛风暴预警，只能匍匐前行，懊恼于错失了去飞机残骸的机会，结果，世界仿佛忘了这个角落，无风无雨的步行5公里，趟了河，终于找到了这个末世的角落，回程很艰辛，不趟河需要走10公里，所以在路边hitch hack，打到了一个冰岛local小哥的车。感谢良久，小哥回：“如果想要报答我，请好好保护这里的环境”
+
+<center>Day 3：冰与火之歌——冰</center>
+
+
+
+如果想看看世界最初的样子，就去冰岛吧。苍茫甚至是寂寥的大地，随处蕴藏了鬼斧神工的设计。
