--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -3,13 +3,13 @@ layout: post
 permalink: '/:categories/:year/:month/:day/:title/'
 date: '2018-11-29 11:58 +0000'
 published: false
-title: 世界最原始的样子
+title: 冰岛——世界最原始的样子
 ---
 今天是2018年11月29日，坐在冰岛的一家酒店的一角，强台风封路，听着台风呼啸，玻璃抖抖索索强撑着，室外沙发随风乱飞，趁着跟台风抗争的间歇，来聊聊这个世界特别的角落吧。本篇抒情，叙事，加攻略，送给把冰岛列为第一向往地方的朋友们。
 
 <center>Day 0: 到达——意外的收获</center>
 
-到达过程不太顺利，来冰岛的航班很少有直达，本打算从赫尔辛基转机，结果第一班飞机延误，在赫尔辛基鬼使神差的被安排到了去伦敦转机的班次，知识点，瑞士居住证可以在伦敦转机，无需多余手续。到达雷克雅未克（首都）的时间已经零点。拿到租车前往第一个住地ION adventure hotel, 这家在booking.com的评分并不高，但贵在设计感强，获过很多设计奖，非常有末世感靠近靠近黄金圈，距离机场也正常路程40分钟左右，但赶巧遇到封路，只能绕道，多增加了一个小时。
+到达过程不太顺利，来冰岛的航班很少有直达，本打算从赫尔辛基转机，结果第一班飞机延误，在赫尔辛基鬼使神差的被安排到了去伦敦转机的班次，知识点，瑞士居住证可以在伦敦转机，无需多余手续。到达雷克雅未克（首都）的时间已经零点。拿到租车前往第一个住地ION adventure hotel。这家在booking.com的评分并不高，但贵在设计感强，获过很多设计奖，非常有末世感靠近靠近黄金圈，距离机场也正常路程40分钟左右，但赶巧遇到封路，只能绕道，多增加了一个小时。
 
 凌晨赶路除了困，别有番风情，驶出城区后，就进入了一片寂寥。四周毫无灯光，月亮半边脸藏在云中，朦朦胧胧，连山的轮廓都黑漆漆，模糊不清。旷野中唯一显眼的是星星，自顾自的异常明亮，无奈星座认得的不多，少许数得上来的就有射手座的三颗腰带，明铮铮定在空中。百无聊赖的赶路，收音机呲啦作响，忽然，天就不一样了，大片的极光悬在山边，绿幕如幔帐摇曳，飘动，极为明显。从去年的阿拉斯加极光chasing tour，到芬兰的极光小屋，凡极光有关旅程都没有肉眼看到极光，用专业相机长曝光捕捉到的星星点点的绿色聊以慰藉。而冰岛行毫无预期误打误撞的遇到了大片极光 。之前还在想肉眼看到极光是什么样，果真看到了就能分辨了，就是跟云不一样！高速的车上，手机随便拍拍就有绿色的天幕。变化急快，消失的的也快。但走不了多远又是新的一片，收下了第一份意外的收获。
 
@@ -17,20 +17,32 @@ title: 世界最原始的样子
 
 10点日出，看到了ION真实的模样。
 
-启程去黄金圈。黄金圈包含辛格维利尔国家公园（Þingvellir National Park）、盖歇尔间歇泉区（Geysir）、黄金瀑布（Gullfoss），彼此距离很近，打造地球的时候对这块土地非常友好，
+启程去黄金圈。黄金圈包含辛格维利尔国家公园（Þingvellir National Park）、盖歇尔间歇泉区（Geysir）、黄金瀑布（Gullfoss），彼此距离很近，却又毫不相同。众神打造地球的时候对这块土地非常友好，随意的掷下了一把明珠，偏生不同的三颗珠子挤在了一起。补充一点知识点：
 
+辛格维利尔国家公园：“ 欧亚与美洲板块的分界处，素有“世界最古老的民主议会会址”之称，后来这里成为冰岛人民喜庆大事的庆贺之地，2004年辛格维利尔国家公园被联合国教科文组织列入“世界遗产名录”。”
 
+盖歇尔间歇泉区： 冰岛喷水高度最高的间歇泉
 
-如果想看看世界最初的样子，就去冰岛吧。苍茫甚至是寂寥的大地，随处蕴藏了鬼斧神工的设计。邂逅了一群有灵性的马，在夕阳下，奔腾而来，驻足，走近，不愿离去，美丽纯净善良美好，触碰间感受都要满的溢出来了，感觉被眷顾了，三生有幸。谢谢冰岛人为地球留下了这一方净土，怀着敬畏前行。
+黄金瀑布：美
 
-<center>Day 2：维克——自然的力量</center>
+靠近间歇泉的路上，邂逅了一群有灵性的马，在夕阳下，奔腾而来，驻足，走近，不愿离去，整个场景美好的不真实。冰岛马小巧而健壮，他们与第一批冰岛人同时到达，是岛上的第一批原住民。性格温顺，以它们特有的方式在欢迎着来访者。“亲和人”绝不只是流于文字的描述，当马群迫切的奔来，徐徐接近，嗅嗅伸出的手指，触碰间，世上所有美好的感受都要满的溢出来了，感觉被眷顾了，三生有幸。
 
-15级台风的抗争
+<center> Day 2：维克——自然的力量</center>
 
-今天的故事关于自然的力量，15级台风天把世界变成了黑白色（第一三张图黑沙滩都是原图颜色），整个冰岛风暴预警，只能匍匐前行，懊恼于错失了去飞机残骸的机会，结果，世界仿佛忘了这个角落，无风无雨的步行5公里，趟了河，终于找到了这个末世的角落，回程很艰辛，不趟河需要走10公里，所以在路边hitch hack，打到了一个冰岛local小哥的车。感谢良久，小哥回：“如果想要报答我，请好好保护这里的环境”
+经历了一天的风和日丽，大自然就开始展示强硬的手腕了，随时提醒谁才是这块土地的主宰。在内陆生活久了，台风总是新闻里出现的词语，第一次遇到就是15级强台风，没有概念的台风小白就这么出发了。第一站黑沙滩，local说这是吃人的浪，黑沙滩黑如煤炭，海滩与山崖相接，玄武岩，鬼斧神工，跟择天记里陈长生怕的很像。但不得不提，存在感最强的就是风力，这是Day2~Day3的敏感话题，风力大到人必须蹲着匍匐前行，以我的身板儿，不得不走两步蹲着，两脚绝不能同时离地，否则就会飞起来，毫不夸张。坐在沙发上的我淡定的写着这段话，但讲实话，在沙滩边，大浪翻起，海天一片混沌，大风随时作势要掀起一切，第一次感受到了来自大自然有关生存的恐惧。海边还站着不知该成为勇士还是无知者的人们，在面对大海沉思，着实替他们捏把汗。
 
-<center>Day 3：冰与火之歌——冰</center>
+急匆匆远离海滩边，开到了风较小的象鼻山上，眺望觉，一路风给面子，尚属平静，但到了崖顶风再次大作，顺着铁链爬行，抱着崖顶的石柱，拍了两张黑沙滩俯视图。什么支撑着我呢？就是那些小轿车，坚强的来来往往，在崖顶逗留，车主淡定下车拍照，冰岛可能真的要吃多一点去会比较保险。
 
+本来这一天到这里就结束了，结果...
 
+来冰岛前做攻略，一直很想去飞机残骸，向往了很久，但因为要步行5公里，狂风天根本无法成行，笔者本身是一个极其不热爱运动的人，所以更加难上加难。所以悻悻然在心里记一笔遗憾。结果，谁承想，路过飞机残骸地，竟然无风无雨，就像是被世界遗忘了，全冰岛风暴预警，却大赦了这片黑土地。一边高呼感谢上苍，一边背起相机急速前行。但这不是童话故事里的美好结局，结果，竟然，走错了路。在走了5公里，我们暂且不表有多艰辛，一直用地图指引着方向，快到进前的时候，苍茫的大地完全不见飞机或者人的踪影。迎面见到一条3米宽的小河，不深，但是磨过脚。地图上没有标注，应该是因为暴雨而形成的支流。怎么办，听到河对面的山头似乎有人声，看来阻隔理想和现实的就是这一条河了。于是，选择了一条“非常科学的方法”——趟过去！不可以放弃，不可以往回走，爱谁走谁走，我反正要过去。然后趟河二人组研究了10分钟，找到最平缓的区域，象征性搭了一条石子路，踩入水中，以鞋子湿透趟河成功告终。爬上小山头，就看到了他！
 
-如果想看看世界最初的样子，就去冰岛吧。苍茫甚至是寂寥的大地，随处蕴藏了鬼斧神工的设计。
+辛苦都值了。美国海军的飞机残骸，已经融入了这块土地的一部分。黑沙滩，大海，天空，飞机。
+
+回来的路，实在不想趟河，就选择了迂回路线，也就是意味着要走10公里，踉跄着走回了其他大多数找对路的人停车的大本营，开始hitch hack。找到了一个冰岛local，感谢良久，闲谈几句后，小哥回：“如果想要报答我，请好好保护这里的环境”，可爱的冰岛人。
+
+<center> Day 3：与台风抗争中 </center>
+
+思考后，决定躺赢，休息了一上午，时间就到了现在，空间就到了酒店的小角。之后会发生什么呢？
+
+未完待续。
