--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -7,80 +7,39 @@ title: 冰岛——世界最原始的样子
 ---
 今天是2018年11月29日，坐在冰岛的一家酒店的一角，强台风封路，听着台风呼啸，玻璃抖抖索索强撑着，室外沙发随风乱飞，趁着跟台风抗争的间歇，来聊聊这个世界特别的角落吧。本篇抒情，叙事，加攻略，送给把冰岛列为第一向往地方的朋友们&萱 。
 
-
-
-Day 0: 到达——意外的收获
-
-
+<center>Day 0: 到达——意外的收获</center>
 
 到达过程不太顺利，来冰岛的航班少有直达，本打算从赫尔辛基转机，结果第一班飞机延误，在赫尔辛基鬼使神差的被安排到了去伦敦转机的班次，知识点，瑞士居住证可以在伦敦转机。到达雷克雅未克（首都）的时间已经零点。拿到租车，前往第一个住地ION adventure hotel。这家在booking.com的评分并不高，但优秀点在于设计感强，获过很多设计大奖，非常有末世感。而且位置靠近黄金圈，离机场也很近，正常路程40分钟左右。但赶巧遇到了封路，只能绕道，增加了一个小时的路程。
 
-
-
-
-
-
-
-
+![行驶的车]({{site.baseurl}}/uploads/640 (1).gif)
 
 凌晨赶路除了困，别有一番风情，驶出城区后，就进入了一片寂寥。四周毫无灯光，月亮半边脸藏在云中，朦朦胧胧，连山的轮廓都黑漆漆，模糊不清。旷野中唯一显眼的是星星，自顾自的异常明亮，无奈星座认得的不多，少许数得上来的就有射手座的三颗腰带，明铮铮定在空中。百无聊赖的赶路，收音机呲啦作响，忽然，天就不一样了，大片的极光悬在山边，绿幕如幔帐摇曳，飘动，极为明显。从去年的阿拉斯加极光chasing tour，到芬兰的极光小屋，凡极光有关旅程都没有肉眼看到极光，用专业相机长曝光捕捉到的星星点点的绿色聊以慰藉。而冰岛行毫无预期误打误撞的遇到了大片极光 。之前还在想肉眼看到极光是什么样，果真看到了就能分辨了，就是跟云不一样！高速的车上，手机随便拍拍就有绿色的天幕。变化急快，消失的的也快。但走不了多远又是新的一片，收下了第一份意外的收获。
 
-
-
-
-
-
+![极光]({{site.baseurl}}/uploads/lrg_dsc09198.jpg)
 
 Day 1:黄金圈——匠心和美好
 
-
-
 10点日出，看到了ION真实的模样。
 
-
-
-
-
-
+![ION酒店照片]({{site.baseurl}}/uploads/img_3950.jpg)
 
 启程去黄金圈。黄金圈包含辛格维利尔国家公园（Þingvellir National Park）、盖歇尔间歇泉区（Geysir）、黄金瀑布（Gullfoss），彼此距离很近，却又毫不相同。众神打造地球的时候对这块土地非常友好，随意的掷下了一把明珠，偏生不同的三颗珠子挤在了一起。补充一点知识点：
 
-
-
 辛格维利尔国家公园： 欧亚与美洲板块的分界处，素有“世界最古老的民主议会会址”之称，后来这里成为冰岛人民喜庆大事的庆贺之地，2004年辛格维利尔国家公园被联合国教科文组织列入“世界遗产名录”。（路过）
 
-
-
-
-
-
+![辛格维利尔国家公园]({{site.baseurl}}/uploads/img_4722.jpg)![img_4722.jpg]({{site.baseurl}}/uploads/img_4722.jpg)
 
 盖歇尔间歇泉区： 冰岛喷水高度最高的间歇泉
 
-
-
-
-
-
+![盖歇尔间歇泉区]({{site.baseurl}}/uploads/img_3954%20(1).jpg)
 
 黄金瀑布：美
 
-
-
-
-
-
+![黄金瀑布]({{site.baseurl}}/uploads/img_3952.jpg)
 
 一段插曲。去往间歇泉的路上，邂逅了一群有灵性的马，在夕阳下，奔腾而来，驻足，走近，不愿离去，整个场景美好的不真实。冰岛马小巧而健壮，他们与第一批冰岛人同时到达，是岛上的第一批原住民，也就是这片土地的主人，它们以特有的方式欢迎着来访者。“温和亲人”绝不只是流于文字的描述，当马群迫切的奔来，徐徐接近，嗅嗅旅人伸出的手指，触碰间，世上所有美好的感受都要满的溢出来了，感觉被眷顾了，三生有幸。
 
-
-
-
-
-
-
-
-
+![马群奔腾而来]({{site.baseurl}}/uploads/img_4710%20(1).jpg)
 
 Day 2：维克——自然的力量
 
