--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -41,37 +41,27 @@ Day 1:黄金圈——匠心和美好
 
 ![马群奔腾而来]({{site.baseurl}}/uploads/img_4710%20(1).jpg)
 
+![小马徐徐走近]({{site.baseurl}}/uploads/screenshot-mp.weixin.qq.com-2018.11.30-19-08-19.png)
+
 Day 2：维克——自然的力量
-
-
 
 经历了一天的风和日丽，大自然就开始展示强硬的手腕了，随时提醒谁才是这块土地的主宰。在内陆生活久了，台风总是新闻里出现的词语，没成想第一次遇到就是15级强台风，没有概念的台风小白就这么出发了。
 
 第一站黑沙滩，local说这是吃人的浪，黑沙滩黑如煤炭，海滩与山崖相接尽是玄武岩，鬼斧神工，跟择天记里陈长生爬的很像。但不得不提，存在感最强的就是风力，这是Day2~Day3的敏感话题，风力大到人必须匍匐前行，以我的身板儿，不得不走两步蹲着，两脚绝不能同时离地，否则就会飞起来，毫不夸张。坐在沙发上的我淡定的写着这段话，但讲实话，在沙滩边，大浪翻起，海天一片混沌，大风随时作势要掀起一切的时候，第一次感受到了来自大自然的威胁，还是有关生存的那种。海边还站着不知该成为勇士还是无知者的人们，在面对大海沉思，着实替他们捏把汗。
 
+![黑沙滩]({{site.baseurl}}/uploads/img_4461.jpg)
 
+![黑沙滩的人们]({{site.baseurl}}/uploads/lrg_dsc09241.jpg)
 
-
-
-
-
-
+![玄武岩]({{site.baseurl}}/uploads/img_4706.jpg)
 
 急匆匆远离海滩边，开到了风较小的象鼻山眺望角。一路风很给面子，尚属平静，但到了崖顶风再次大作，顺着铁链爬行，抱着崖顶的石柱，拍了两张黑沙滩俯视图。什么支撑着我呢？就是那些无畏的小轿车，中型SUV尚且摇摆，几辆Kia小轿车坚强的来来往往，在崖顶逗留，车主淡定下车拍照，冰岛可能真的要吃多一点去会比较保险。
 
-
-
-
-
-
+![俯瞰黑沙滩]({{site.baseurl}}/uploads/img_4499.jpg)
 
 乘着大风看了一眼地标红房子。
 
-
-
-
-
-
+![红房子不同时间天气对比照]({{site.baseurl}}/uploads/img_4499.jpg)
 
 本来这一天到这里就结束了，结果...
 
