--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -65,15 +65,9 @@ Day 2：维克——自然的力量
 
 本来这一天到这里就结束了，结果...
 
-
-
 来冰岛前做攻略，看到了飞机残骸，就心向往之，但因为要步行5公里，笔者本身是一个极其不热爱运动的人，狂风天就更加无法成行，难上加难。所以悻悻然在心里记一笔遗憾。结果，谁承想，路过飞机残骸地，竟然无风无雨。这个角落就像是被世界遗忘了，全冰岛风暴预警，却大赦了这片黑土地。一边高呼感谢上苍，一边背起相机急速前行。但，这不是童话故事里的美好结局，结果，竟然，走，错，了，路...
 
-
-
-
-
-
+![徒步中]({{site.baseurl}}/uploads/img_4494.jpg)
 
 走了5公里，我们暂且不表有多艰辛，一直用地图指引着方向，地图显示大约到附近的时候，苍茫的大地完全不见飞机或者人的踪影，迎面却见到一条3米宽的小河，不深，但是没过脚。地图上没有标注，应该是因为暴雨而形成的支流。怎么办，听到河对面的山头似乎有人声，看来阻隔理想和现实的就是这一条河了。于是，选择了一条“非常科学的方法”——趟过去！不可以放弃，不可以往回走，爱谁走谁走，我反正要过去。然后趟河二人组研究了10分钟，找到最平缓的区域，象征性搭了一条石子路，事实证明没有任何用处，最终还是踩在水里，以鞋子湿透趟河成功告终。爬上小山头，就看到了他！
 
