--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -71,14 +71,15 @@ Day 2：维克——自然的力量
 
 走了5公里，我们暂且不表有多艰辛，一直用地图指引着方向，地图显示大约到附近的时候，苍茫的大地完全不见飞机或者人的踪影，迎面却见到一条3米宽的小河，不深，但是没过脚。地图上没有标注，应该是因为暴雨而形成的支流。怎么办，听到河对面的山头似乎有人声，看来阻隔理想和现实的就是这一条河了。于是，选择了一条“非常科学的方法”——趟过去！不可以放弃，不可以往回走，爱谁走谁走，我反正要过去。然后趟河二人组研究了10分钟，找到最平缓的区域，象征性搭了一条石子路，事实证明没有任何用处，最终还是踩在水里，以鞋子湿透趟河成功告终。爬上小山头，就看到了他！
 
-
-
-
-
-
+![飞机残骸]({{site.baseurl}}/uploads/img_4712.jpg)
 
 一切辛苦都值了。美国海军的飞机残骸，被遗失在这片黑土地里，成为了这里的一部分。黑沙滩，大海，天空，飞机不可分割。于是就开始拍！照！片！
 
+![飞机残骸游客照-1]({{site.baseurl}}/uploads/img_4719.jpg)
+
+![飞机残骸游客照-2]({{site.baseurl}}/uploads/img_4721.jpg)
+
+![飞机残骸游客照-3]({{site.baseurl}}/uploads/img_4718.jpg)
 
 
 
