--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -17,7 +17,7 @@ title: 冰岛——世界最原始的样子
 
 ![极光]({{site.baseurl}}/uploads/lrg_dsc09198.jpg)
 
-Day 1:黄金圈——匠心和美好
+<center>Day 1:黄金圈——匠心和美好</center>
 
 10点日出，看到了ION真实的模样。
 
@@ -43,7 +43,7 @@ Day 1:黄金圈——匠心和美好
 
 ![小马徐徐走近]({{site.baseurl}}/uploads/screenshot-mp.weixin.qq.com-2018.11.30-19-08-19.png)
 
-Day 2：维克——自然的力量
+<center>Day 2：维克——自然的力量</center>
 
 经历了一天的风和日丽，大自然就开始展示强硬的手腕了，随时提醒谁才是这块土地的主宰。在内陆生活久了，台风总是新闻里出现的词语，没成想第一次遇到就是15级强台风，没有概念的台风小白就这么出发了。
 
@@ -82,23 +82,13 @@ Day 2：维克——自然的力量
 ![飞机残骸游客照-3]({{site.baseurl}}/uploads/img_4718.jpg)
 
 
-
-
-
-
-
-
-
-
-
-
 回来的路，实在不想趟河，就选择了迂回路线，也就是意味着要走10公里，踉跄着走回了其他大多数找对路的人停车的大本营，开始hitch hack。找到了一个冰岛local，感谢良久，闲谈几句后，小哥回：
 
 “如果想要报答我，请好好保护这里的环境”，可爱的冰岛人。
 
 
 
-Day 3：与台风抗争中
+<center>Day 3：与台风抗争中</center>
 
 
 
