--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -86,18 +86,11 @@ title: 冰岛——世界最原始的样子
 
 “如果想要报答我，请好好保护这里的环境”，可爱的冰岛人。
 
-
-
 <center>Day 3：与台风抗争中</center>
-
-
 
 关于与台风的斗争，经过激励的思想斗争，决定躺赢。休息了一上午，时间就到了现在，空间就到了酒店的一角。之后会发生什么呢？期待一下。
 
-
-
-
-
+![酒店一角]({{site.baseurl}}/uploads/img_4505.jpg)
 
 
 未完待续。。。
