--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -27,7 +27,7 @@ title: 冰岛——世界最原始的样子
 
 辛格维利尔国家公园： 欧亚与美洲板块的分界处，素有“世界最古老的民主议会会址”之称，后来这里成为冰岛人民喜庆大事的庆贺之地，2004年辛格维利尔国家公园被联合国教科文组织列入“世界遗产名录”。（路过）
 
-![辛格维利尔国家公园]({{site.baseurl}}/uploads/img_4722.jpg)![img_4722.jpg]({{site.baseurl}}/uploads/img_4722.jpg)
+![辛格维利尔国家公园]({{site.baseurl}}/uploads/img_4722.jpg)
 
 盖歇尔间歇泉区： 冰岛喷水高度最高的间歇泉
 
