--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -11,7 +11,7 @@ title: 冰岛——世界最原始的样子
 
 到达过程不太顺利，来冰岛的航班少有直达，本打算从赫尔辛基转机，结果第一班飞机延误，在赫尔辛基鬼使神差的被安排到了去伦敦转机的班次，知识点，瑞士居住证可以在伦敦转机。到达雷克雅未克（首都）的时间已经零点。拿到租车，前往第一个住地ION adventure hotel。这家在booking.com的评分并不高，但优秀点在于设计感强，获过很多设计大奖，非常有末世感。而且位置靠近黄金圈，离机场也很近，正常路程40分钟左右。但赶巧遇到了封路，只能绕道，增加了一个小时的路程。
 
-![行驶的车]({{site.baseurl}}/uploads/640 (1).gif)
+![行驶的车]({{site.baseurl}}/uploads/641.gif)![641.gif]({{site.baseurl}}/uploads/641.gif)
 
 
 凌晨赶路除了困，别有一番风情，驶出城区后，就进入了一片寂寥。四周毫无灯光，月亮半边脸藏在云中，朦朦胧胧，连山的轮廓都黑漆漆，模糊不清。旷野中唯一显眼的是星星，自顾自的异常明亮，无奈星座认得的不多，少许数得上来的就有射手座的三颗腰带，明铮铮定在空中。百无聊赖的赶路，收音机呲啦作响，忽然，天就不一样了，大片的极光悬在山边，绿幕如幔帐摇曳，飘动，极为明显。从去年的阿拉斯加极光chasing tour，到芬兰的极光小屋，凡极光有关旅程都没有肉眼看到极光，用专业相机长曝光捕捉到的星星点点的绿色聊以慰藉。而冰岛行毫无预期误打误撞的遇到了大片极光 。之前还在想肉眼看到极光是什么样，果真看到了就能分辨了，就是跟云不一样！高速的车上，手机随便拍拍就有绿色的天幕。变化急快，消失的的也快。但走不了多远又是新的一片，收下了第一份意外的收获。
