--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -39,7 +39,7 @@ title: 冰岛——世界最原始的样子
 
 一段插曲。去往间歇泉的路上，邂逅了一群有灵性的马，在夕阳下，奔腾而来，驻足，走近，不愿离去，整个场景美好的不真实。冰岛马小巧而健壮，他们与第一批冰岛人同时到达，是岛上的第一批原住民，也就是这片土地的主人，它们以特有的方式欢迎着来访者。“温和亲人”绝不只是流于文字的描述，当马群迫切的奔来，徐徐接近，嗅嗅旅人伸出的手指，触碰间，世上所有美好的感受都要满的溢出来了，感觉被眷顾了，三生有幸。
 
-![马群奔腾而来]({{site.baseurl}}/uploads/img_4710%20.jpg)
+![马群奔腾而来]({{site.baseurl}}/uploads/img_4710.jpg)
 
 ![小马徐徐走近]({{site.baseurl}}/uploads/screenshot-mp.weixin.qq.com-2018.11.30-19-08-19.png)
 
