--- a/_drafts/2018-11-29-.md
+++ b/_drafts/2018-11-29-.md
@@ -75,7 +75,7 @@ title: 冰岛——世界最原始的样子
 
 一切辛苦都值了。美国海军的飞机残骸，被遗失在这片黑土地里，成为了这里的一部分。黑沙滩，大海，天空，飞机不可分割。于是就开始拍！照！片！
 
-![飞机残骸游客照-1]({{site.baseurl}}/uploads/img_4498.jpg)![img_4498.jpg]({{site.baseurl}}/uploads/img_4498.jpg)
+![飞机残骸游客照-1]({{site.baseurl}}/uploads/img_4498.jpg)
 
 ![飞机残骸游客照-2]({{site.baseurl}}/uploads/img_4721.jpg)
 
