--- a/_drafts/2018-12-05-.md
+++ b/_drafts/2018-12-05-.md
@@ -22,14 +22,14 @@ title: 冰岛——世界最初的样子（下集）
 主色调是蓝白色的。冰河湖是冰川向海的入口，湖中有冰川上掉落的大块的浮冰，飘在湖面。一阵风过，冰湖上传来咔咔的声音，大块浮冰的一角逐渐裂开，随着一声沉闷的“砰”，坠落湖中，变成小块向海中缓缓飘去。
 
 
-
+![冰河湖照片1]({{site.baseurl}}/uploads/img_4699.jpg)
+![冰河湖照片2]({{site.baseurl}}/uploads/img_4703.jpg)
 
 
 钻石沙滩就在马路对面。一片黑黝黝的沙滩，与名字叫黑沙滩的滩相比，没有杂质和大块石头，更加名副其实。大大小小的冰块在海滩边聚集，他们是冰川的孩子，匆匆赶去大海，被浪推了回来就变成了钻石。无碎钻，平均100克拉以上。这边的色调就不一样了，主色黑，副色蓝，点睛之笔就是太阳色了。暴风间隔中，云缝隙里的太阳异常珍贵，夕阳西下，平静浪漫如油画。
 
-
-
-
+![黑沙滩照片1]({{site.baseurl}}/uploads/img_4548.jpg)
+![黑沙滩阳光照]({{site.baseurl}}/uploads/img_4704.jpg)
 
 你说冰岛多神奇，雪山，火山，冰川，湖，海，沙滩，都这么紧赶紧的挤在一起。
 
