--- a/_drafts/2018-12-05-.md
+++ b/_drafts/2018-12-05-.md
@@ -21,7 +21,6 @@ title: 冰岛——世界最初的样子（下集）
 
 主色调是蓝白色的。冰河湖是冰川向海的入口，湖中有冰川上掉落的大块的浮冰，飘在湖面。一阵风过，冰湖上传来咔咔的声音，大块浮冰的一角逐渐裂开，随着一声沉闷的“砰”，坠落湖中，变成小块向海中缓缓飘去。
 
-
 ![冰河湖照片1]({{site.baseurl}}/uploads/img_4699.jpg)
 ![冰河湖照片2]({{site.baseurl}}/uploads/img_4703.jpg)
 
@@ -35,77 +34,72 @@ title: 冰岛——世界最初的样子（下集）
 
 就这样悠闲的一天过去。夜晚风起，坐在宾馆小角落被德国Ard 的纪录片（听说是CNN级别的）producer 搭讪，邀请周六一起前往三个特别的蓝冰洞，好激动。可惜时间不允许，只能傲娇的拒绝。
 
-Day 4：冰川与蓝冰洞——高超的技巧
+<center>Day 4：冰川与蓝冰洞——高超的技巧</center>
 
 来来回回取消了三次的蓝冰洞和冰川之旅，在我虔诚的期盼下，竟然，没有，取消。激动的到了集合地，向导给每个团员发了一个安全绑带，冰镐和冰锥鞋。开始做行前动员：其他都没记得，就一句话如雷贯耳，在冰川上任何东西滑落都别救，哪怕是你的wife。好，出发！
 
-
+![接近冰川]({{site.baseurl}}/uploads/img_5128.jpg)
 
 笨重的登山鞋，沉甸甸的冰镐，光走平地就气喘吁吁，嗯，还有3个小时结束了。徒步到了冰川，当一脚踏上冰川的时候，一切都更加艰难！行走的每一步属于扎马步加踏步走，每一步都要扎实。冰川的风可不是寻常之辈，狂风大作是要命的。冰川的冰强度很大，是平常冰的5倍，冰镐对于上臂没力气的人，比如我，基本形同虚设，完全锄不进去。
 
-
+![冰川照]({{site.baseurl}}/uploads/lrg_dsc09343.jpg)
 
 怀着一颗不想死的心，一直在低头走路，所以产出的照片少得可怜。命真的很重要！一千年以后，来到了第一个蓝冰洞！mini 蓝冰洞，要怀着一颗积极向上感恩的心，看到就比没看到强。
 
-
+![蓝冰洞]({{site.baseurl}}/uploads/img_5127.jpg)
 
 又一千年以后，来到了长长的冰隧道！向导说是有人反应蓝冰洞不够震撼，所以人工开凿的。
 
-
+![冰隧道]({{site.baseurl}}/uploads/lrg_dsc09332.jpg)
 
 回头望望，冰川是壮观的，瓦特纳冰川，有5个伦敦的大小，冰岛语意为水，脱俗的名字与高冷的性情很配，对人类不友好，不知道是否会孕育神奇物种。嗯，终于是要走了，故作不紧张胜利照一张，展示一下专业装置。
 
-
+![不紧张胜利照]({{site.baseurl}}/uploads/img_5356.jpg)
 
 说话间就到了晚上，5个小时车程开往草帽山。一路无风，摆脱了可怖的冰川，开心的手舞足蹈。然而，又出了状况。开到西半岛的路上遇到了暴雪，不是那个游戏公司，大晚上，妖风卷携起天空的雪花，扬起地上的积雪，在雾灯的照射下，白白黄黄，横冲直撞，更可怖的还是成团成群，眼见越过了一团，10米外又是一群，暴雪天无法停车，只能减速一头扎进猛兽怀里。作者实在太怂，头都没敢抬，在微博附近的人的状态里找到了一个视频，可见一斑。
 
-
+![大风照]({{site.baseurl}}/uploads/img_5360.jpg)
 
 终于到了草帽山。又是另一个骇人的开始，海边，大风，小木屋一阵阵呜咽声，然后随着狂风乱颤。给leasing office打电话，表达对房子坚牢程度的怀疑，房主表示，可以放心，遂不踏实的睡去。
 
-Day 5: 草帽山与北境之墙——冰与火之歌
+![小木屋]({{site.baseurl}}/uploads/lrg_dsc09348.jpg)
 
-
+<center>Day 5: 草帽山与北境之墙——冰与火之歌</center>
 
 惊悚故事后来一段抒情的吧。早上看窗外的风景，草原，湖光山色。与三体破壁人里描述的无异，曾经一直在想，书里所设想的地方是否真的存在，草地散步，湖中游船，远望雪山，白雪皑皑，那该是一方土地天赐的幸运，然后就这么出现了，抚慰了收了惊吓的神经。
 
-
+![木屋外景色]({{site.baseurl}}/uploads/img_5128.jpg)
 
 启程出发前往冰与火之歌的取景地草帽山，冬天的景色与美剧里的不太一样，更加冷峻，萧瑟，有气势。温度到了零下，到处都结了冰，有冰凌。
 
-
+![草帽山]({{site.baseurl}}/uploads/lrg_dsc09368.jpg)
 
 还有为了艺术挑战高难角度的摄影师们，占据了每个险峻的角落。
 
-
+![草帽山与瀑布]({{site.baseurl}}/uploads/img_5354.jpg)
 
 下一站是我很期待的北境之墙。
 
-
+![北境之墙]({{site.baseurl}}/uploads/img_5355.jpg)
 
 原来，北境之墙，是可以爬的，可能攻占它并不需要巨人。没有完全覆盖雪的玄武岩，有棱有角，结构明晰，粗犷豪迈。顺着小道爬上去，滑下来，自行加了一个活动。
 
-Day 5 蓝湖——真的是蓝色的
+<center>Day 6 蓝湖——真的是蓝色的</center>
 
-
-
-
+![蓝湖]({{site.baseurl}}/uploads/img_5352.jpg)
 
 看看字数真的很长了，不能再展开了。Day 5就是慢节奏泡温泉，终于开始度假模式，没有风，没有雪，有温泉，还有极光！
 
-
+![北极光加北斗七星]({{site.baseurl}}/uploads/img_5310.jpg)
 
 新鲜出炉的彩虹极光加北斗七星。不一样的组合。
 
-总结一下
+<center>总结一下</center>
 
 思绪回到了飞机上，旅行要告一段落了，虽然充满了不期而遇的惊吓，但这不是还活着吗？经历宝贵，金不换。
 
 如果想看看世界最初的样子，就去冰岛吧。少房，少人，甚至都没有树。就是这样苍茫甚至是寂寥的大地，随处蕴藏了鬼斧神工的设计。谢谢冰岛人为地球留下了这一方净土。怀着敬畏珍惜。
 
-
-
-长按二维码关注我们
 
 
 
