--- a/_drafts/2018-12-06-.md
+++ b/_drafts/2018-12-06-.md
@@ -7,13 +7,16 @@ title: 推荐几部看过的动画电影
 ---
 马上要去电影院看无敌破坏王2了，太激动。
 
+![开心的动画]({{site.baseurl}}/uploads/NWJDUDZidUU1THE2NmJ5VDVvNk0%3D.gif)
 
+朋友和我一样激动，还花了一张特别的插画。
 
-朋友和我一样激动，还花了一张特别的插画。（插图）
+![无敌破坏王与皮豆儿]({{site.baseurl}}/uploads/WechatIMG18.jpeg)
 
 正值电影上映之际，小编顺便推荐几部看过的动画电影吧。
 
-无敌破坏王
+1. 无敌破坏王
+
 要看这一部，不如把上一部再补一补。上一部剧情已经不记得了，只是记得看到最后很感动，这种强烈的感情记忆留了下来。总之，值得一看。PS：你们不用担心我剧透了。
 
 
