--- a/_drafts/2018-12-06-.md
+++ b/_drafts/2018-12-06-.md
@@ -15,58 +15,68 @@ title: 推荐几部看过的动画电影
 
 正值电影上映之际，小编顺便推荐几部看过的动画电影吧。
 
+![无敌破坏王]({{site.baseurl}}/uploads/0.jpeg)!
+
 1. 无敌破坏王
 
 要看这一部，不如把上一部再补一补。上一部剧情已经不记得了，只是记得看到最后很感动，这种强烈的感情记忆留了下来。总之，值得一看。PS：你们不用担心我剧透了。
 
-
+![无敌破坏王-1]({{site.baseurl}}/uploads/0-1.jpeg)
 
 2. Coco
 
 以亲情为主题的片子，很感人，音乐也很美。
 
+![Coco]({{site.baseurl}}/uploads/p13930352_v_v8_ac.jpg)
 
 
 3. Zootopia
 
 很少看到这种破案题材影片吧，人物个性十分鲜明。DMV的树懒也真是黑到极致了。
 
+![Zootopia]({{site.baseurl}}/uploads/movie_poster_zootopia_866a1bf2.jpeg)
 
 
 3. 超人总动员
 
 今年刚看过超人总动员2吧，印象还是不错的，感觉还要拍续集，对那个超能力宝宝超级期待。
 
+![超人总动员]({{site.baseurl}}/uploads/147036058973587100_a580xH.jpeg)
 
 
 4. 卑鄙的我
 
 已经出了好几集了吧，推荐理由就是小黄人也太萌了吧，叽了歪赖地说一堆，又一大群，看着十分魔性。
 
+![卑鄙的我]({{site.baseurl}}/uploads/200247.20519114_o.jpg)
 
 
 5. 魔发奇缘
 
 公主类电影已经看得比较少了，但是印象中这部动画很搞笑。放天灯的场景也超美的。
 
+![魔发奇缘]({{site.baseurl}}/uploads/20160217114001946-new.jpg)
 
 
 6. 驯龙记
 
 说起来这部片子还是有很多争议的，但是从最初人与龙的屠杀，到后来和平相处，还算是有所进步。
 
+![驯龙记]({{site.baseurl}}/uploads/how-to-train-your-dragon-52e51b103a03e.jpg)
 
 
 7. 怪物公司
 
 有趣的故事设定，个性鲜明的人物，加上故事的主旨正确-------笑声比尖叫能产生的能量更大，是一部好动画。
 
+![怪物公司]({{site.baseurl}}/uploads/monstersinc-allcharacters.jpg)
 
 
 8. 超能陆战队 Big Hero 6
 
 我又一次不记得剧情了，但是就是记得大白超级暖啊。胖胖的又萌萌哒。
 
+![超能陆战队]({{site.baseurl}}/uploads/screenshot-i.kinja-img.com-2018.12.06-22-31-09.png)
 
 
 9. 千与千寻
