--- a/_drafts/2018-12-06-.md
+++ b/_drafts/2018-12-06-.md
@@ -83,36 +83,41 @@ title: 推荐几部看过的动画电影
 
 接下来推荐几部日本动画电影吧。千与千寻是我还在初中的时候，美术老师给我们放的一部电影。第一次看到这样一个光怪陆离的世界，被作者天马行空的想象力惊到了。主人公在经历中的成长也是看到见的。
 
-
+![千与千寻-1]({{site.baseurl}}/uploads/201703140949280afoMYBi4LX1dvPD.jpg)
 
 就多放一张图，给需要减肥的同学们，共勉。
 
-
+![千与千寻-2]({{site.baseurl}}/uploads/e850352ac65c10388e0a787ab3119313b07e8916.jpg)
 
 10. 哈尔的移动城堡
 
 宫崎骏所有的动画电影，最喜欢这部。最开始感觉哈尔神秘而强大，苏菲则很柔软。慢慢地发现，其实苏菲内心更强大，而哈尔则会有时意志消沉，且常常孩子气。最喜欢的片段还是两人第一次见面，一跃而起，跳跃着经过小镇的上空。圆舞曲和轻盈的脚步，相得益彰。哈尔的出场确实让人难忘。
 
+![哈尔移动城堡]({{site.baseurl}}/uploads/Howls-Moving-Castle-A6-Post-Card-Museum-Collection.jpg)
 
 
 11. 狼的孩子雨与雪
 
 很感人的片子。剧中两个孩子选择了完全不一样的路，不管怎么样，可能作为母亲或者家人，只能尊重他们所选择的道路，人生都是自己的，应当有自己的选择。
 
+![狼的孩子雨与雪]({{site.baseurl}}/uploads/maxresdefault.jpg)
 
 
 12. 穿越时空的少女
 
 原来的时候不懂，等真正明白的时候，却来不及了。只有那句，我在未来等你，给影片的结局带来了一点点希望。看的为女主干着急啊，穿越时空，这么好的特长，竟然这么浪费。
 
+![穿越时空的少女]({{site.baseurl}}/uploads/1P316201606-1419-0.jpg)
 
 
 13. 翡翠森林：狼与羊
 
 据说这部影片被选入日本教科书，好奇地看了一下。主题是关于友谊的，很感人的片子。
 
-
+![翡翠森林：狼与羊]({{site.baseurl}}/uploads/1330840294-3526305110.jpg)
 
 14. 你的名字
 
 说实话，看了这部电影，我觉得真难以想象这是新海诚的作品啊。画面还是没有错，但是剧情上完全不像他的风格。他之前的作品大多有一种难以明状的悲伤气息，像秒速五厘米啦，星之声，
+
+![你的名字]({{site.baseurl}}/uploads/unnamed2028129_XJJpP_1200x0.jpg)
