--- a/_drafts/2018-12-06-.md
+++ b/_drafts/2018-12-06-.md
@@ -15,7 +15,7 @@ title: 推荐几部看过的动画电影
 
 正值电影上映之际，小编顺便推荐几部看过的动画电影吧。
 
-![无敌破坏王]({{site.baseurl}}/uploads/0.jpeg)!
+![无敌破坏王]({{site.baseurl}}/uploads/0.jpeg)
 
 1. 无敌破坏王
 
