--- a/_drafts/2018-12-06-.md
+++ b/_drafts/2018-12-06-.md
@@ -7,7 +7,7 @@ title: 推荐几部看过的动画电影
 ---
 马上要去电影院看无敌破坏王2了，太激动。
 
-![开心的动画]({{site.baseurl}}/uploads/NWJDUDZidUU1THE2NmJ5VDVvNk0%3D.gif)
+![开心]({{site.baseurl}}/uploads/huangren.gif)
 
 朋友和我一样激动，还花了一张特别的插画。
 
