--- a/_drafts/2018-12-07-.md
+++ b/_drafts/2018-12-07-.md
@@ -3,7 +3,7 @@ layout: post
 permalink: '/:categories/:year/:month/:day/:title/'
 date: '2018-12-07 00:58 +0100'
 published: false
-title: 手把手详解，制作属于自己的浪漫现场抽奖，抽奖流程
+title: 手把手详解，制作属于自己的浪漫现场抽奖
 ---
 讲活动抽奖，开篇一定要强调一下概念。活动抽奖一直是现场活动里一个点睛亮点，大到央视春晚，小到学生会晚会。活动类型覆盖酒会，宣讲，论坛，比赛。好的抽奖安排可以活跃气氛，增强观众参与感，提高收视、上座率。
 
