--- a/_drafts/2018-12-08--high.md
+++ b/_drafts/2018-12-08--high.md
@@ -3,6 +3,6 @@ layout: post
 permalink: '/:categories/:year/:month/:day/:title/'
 date: '2018-12-08 00:30 +0100'
 published: false
-title: 想要让现场气氛high起来？想要聆听观众的声音？亲爱的主办方，你要学会用微信墙了
+title: 想要让活动现场气氛high起来？想要聆听观众的声音？亲爱的活动主办方，你要学会用微信墙了
 ---
 
