--- a/_drafts/2018-12-09-.md
+++ b/_drafts/2018-12-09-.md
@@ -3,7 +3,7 @@ layout: post
 permalink: '/:categories/:year/:month/:day/:title/'
 date: '2018-12-09 00:39 +0100'
 published: false
-title: 免费环保超炫酷的现场荧光棒，你值得拥有
+title: 免费环保超炫酷的现场荧光棒，你值得拥有，手把手详解制作属于自己的电子可控现场观众荧光棒
 ---
 ## A New Post
 
