--- a/_drafts/2018-12-19-.md
+++ b/_drafts/2018-12-19-.md
@@ -11,18 +11,22 @@ title: 没有钝感力的肠胃—苏黎世吃与医
 
 苏黎世的中餐与巴黎，硅谷是不能比的，传闻巴黎的中餐水准高于国内，当然这就是引入比较大法来说明水准之高。经尝试后，又去尝试，又去尝试，没错专门为了吃去了三次巴黎，所传非虚，很地道很好吃。法餐本身也比德国大肘子更加合胃口，在苏黎世待过一阵后吃到美味真的会激动落泪。
 
+![img_5650.jpg]({{site.baseurl}}/uploads/img_5650.jpg)
 
 
 硅谷的中餐重在多，华人多，华人餐厅多，矮子里面拔将军也拔得出几家不错的，至少不会亏待中国胃。
 
+![img_5652.jpg]({{site.baseurl}}/uploads/img_5652.jpg)
 
 
 而苏黎世的中餐，凤毛麟角，大多还是被欧化的西式中餐，炒面炒米，多油少味。几经筛选，4家较为正宗的拯救了味蕾。乍一听四家非常多，但基于地理位置，订餐难易度层层筛选后，就只有一家日常食堂和一家备选改善野味。结果就是跟老板混得飞熟，还做起了产品合作伙伴🤷‍♀️。
 
+![333d16ca-2b45-4508-b41b-b4b7835ec3d4.jpg]({{site.baseurl}}/uploads/333d16ca-2b45-4508-b41b-b4b7835ec3d4.jpg)
 
 
 当然这么吃下去会把钱袋吃瘪，于是就有了偶尔的家庭小作坊。寻着app菜谱的指导，磕磕绊绊做了一些菜。然而故事的发展不是厨艺日渐精进，而是吃进了医院——出其不意的吃坏了肚子。上吐下泻了两天，普通的肠胃药似乎也不管用，于是苏黎世的夜，跑去了急诊。意外的体验了富裕国度的医疗体制，结论就是果然富裕。在经历了前台简单信息闻讯后，就被带到了一个十几平的单间，折叠床，椅子，柜子，病号服，还有单间的配套卫生间，卫生间还配有淋浴，各种设施一应俱全。然而笔者只是来看急性肠胃炎，初来乍到，心中惶恐。
 
+![img_9206.jpg]({{site.baseurl}}/uploads/img_9206.jpg)
 
 
 
